# ama

./: README.md
server/: Cargo.toml
server/src/: database.rs  errors.rs  handler.rs  main.rs  server.rs
server/src/models/: question.rs  room.rs
server/src/routes/: mod.rs  question.rs  room.rs
server/src/utils/: message_data.rs  mod.rs  models.rs  to_object_id.rs
web/: bun.lockb  index.html  package.json
web/src/: App.tsx  index.css  main.tsx  types.ts
web/src/api/: axios.ts  question.ts  room.ts
web/src/components/: Button.tsx  Container.tsx  Link.tsx  Logo.tsx  Slot.tsx  TextInput.tsx
web/src/hooks/: use-questions.ts
web/src/pages/: NotFound.tsx
web/src/pages/Home/: index.tsx
web/src/pages/Room/: index.tsx
web/src/pages/Room/components/: FormQuestion.tsx  ListQuestions.tsx  Question.tsx
